<resources>
    <string name="app_name">毕业设计</string>
    <string name="text_edit">编辑</string>
    <string name="text_login">登录</string>
    <string name="text_register">立即注册</string>
    <string name="text_account">手机号</string>
    <string name="text_input_number">请输入手机号</string>
    <string name="text_remember_password">记住密码自动登陆</string>
    <string name="text_password">密码</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_input_password_not_same">两次密码不一致</string>
    <string name="text_input_password_less_six">请输入至少6位密码</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_register_now">立即注册</string>
    <string name="text_login_trrid">使用其他账号登录</string>
    <string name="text_wechat">微信</string>
    <string name="text_qq">QQ</string>
    <string name="text_register_code">验证码</string>
    <string name="text_input_code">请输入验证码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_register_confirm_password">确认密码</string>
    <string name="text_input_confirm_password">请再次输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_diary_write">DiaryWriteActivity</string>
    <string name="title_activity_c">CActivity</string>
</resources>
